<resources>
    <string name="app_name_debug">Pay-测试版</string>
    <string name="app_name_release">Pay</string>
    <string name="package_name_debug">luyao.pay.debug</string>
    <string name="package_name_release">luyao.pay</string>
    <string name="setting">设置</string>
    <string name="Statistics">统计\n</string>
    <string name="Record">记录\n</string>
    <string name="subscribe">订阅</string>
    <string name="has_subscribed">已订阅</string>
    <string name="day">天</string>
    <string name="search_hint">输入关键字搜索</string>
    <string name="album">图库</string>
    <string name="installed_app">已安装应用</string>
    <string name="search_app">输入应用名称搜索</string>
    <string name="update">更新</string>
    <string name="delete">删除</string>
    <string name="share">分享</string>
    <string name="whether_to_confirm_the_deletion_of_this_record">此操作将丢失%s的所有订阅记录，是否确认删除？</string>
    <string name="has_expired">已过期</string>
    <string name="today_expire">今日过期</string>
    <string name="expire_at">" 天后到期"</string>
    <string name="pay_reason">想记录自己的订阅花费情况，但是各类记账应用又太重了。\n于是，订阅有数 诞生了！一站式管理订阅记录… \n</string>
    <string name="data_backup">数据备份</string>
    <string name="webdav">WebDav</string>
    <string name="connect_status">点击连接 WebDav 服务器</string>
    <string name="connected">已连接</string>
    <string name="backup_to_cloud">备份到云端</string>
    <string name="restore_from_cloud">从云端恢复</string>
    <string name="backup_to_local">备份到本地</string>
    <string name="restore_from_local">从本地恢复</string>
    <string name="Local">本地</string>
    <string name="backingup_to_cloud">正在备份到云端</string>
    <string name="input_webdav_server">请输入服务器地址</string>
    <string name="input_webdav_username">请输入用户名</string>
    <string name="input_webdav_password">请输入应用密码</string>
    <string name="connect_success">连接成功</string>
    <string name="connect_faile">连接失败，请检查配置</string>
    <string name="last_backup_time">上次备份于 %s</string>
    <string name="please_config_webdav">请先配置 WebDav 域名，用户名和应用密码</string>
    <string name="go_to_config">去配置</string>
    <string name="backing_up_to_cloud">正在备份到云端</string>
    <string name="backup_success">备份成功</string>
    <string name="backup_failed">备份失败</string>
    <string name="reading_cloud_backup_data">正在读取云端备份数据</string>
    <string name="restore_failed">还原失败</string>
    <string name="restore_success">还原成功</string>
    <string name="reading_local_backup_data">正在读取本地备份数据</string>
    <string name="backing_to_local">正在备份到本地</string>
    <string name="restoring_cloud_backup_data">正在还原云端备份数据</string>
    <string name="note">提示</string>
    <string name="restore_note">是否恢复您于 %s 上传的 V%s 版本的备份数据？</string>
    <string name="cloud_backup_note">云端数据将被本地数据完全覆盖，是否确认？</string>
    <string name="backup_save_note">备份文件将保存到 Download/Pay 目录下</string>
    <string name="write_backup_note">没有文件权限，无法备份数据</string>
    <string name="permission_again">再次申请</string>
    <string name="go_to_setting">前去设置</string>
    <string name="suan_le">算了</string>
    <string name="permission_no_need">我不需要</string>
    <string name="never_ask_note">被你拒绝太多次，只能到设置页面开启~</string>
    <string name="please_select_local_backup_file">请选择 Download/Pay 目录下的备份文件</string>
    <string name="webdav_server">服务器地址</string>
    <string name="username">用户名</string>
    <string name="app_password">应用密码</string>
    <string name="help">帮助</string>
    <string name="all">全部</string>
    <string name="add_pay">添加订阅</string>
    <string name="start_date">开始日期</string>
    <string name="wheather_to_save_this_pay">是否保存该记录？</string>
    <string name="content_changed_wheather_to_save">记录发生修改，是否确认保存？</string>
    <string name="total_pay_format">总支出： %1$s</string>
    <string name="total_pay">总支出</string>
    <string name="add">添加</string>
    <string name="pay_period">订阅周期</string>
    <string name="developer">开发者</string>
    <string name="feedback">意见反馈</string>
    <string name="other">其他</string>
    <string name="why_pay">为什么要做订阅有数？</string>
    <string name="pay_price">订阅价格</string>
    <string name="end_date">结束日期</string>
    <string name="total_pay_day">总订阅</string>
    <string name="remark">备注</string>
    <string name="remark_hint">记点什么</string>
    <string name="start_date_hint">请选择开始日期</string>
    <string name="pay_period_hint">请选择订阅周期</string>
    <string name="custom">自定义</string>
    <string name="pay_name">订阅名称</string>
    <string name="mode_night">深色模式</string>
    <string name="mode_light">浅色模式</string>
    <string name="mode_system">跟随系统</string>
</resources>