<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Pay_Bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/titleLayout"
        layout="@layout/title_layout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuide3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuide4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/payIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/luyao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLayout" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        style="@style/Pay_CardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="@id/totalDaysTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payIcon" />


    <TextView
        android:id="@+id/totalDay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/total_pay_day"
        android:textColor="@color/color_333333"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@id/verticalGuide2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cardView" />

    <TextView
        android:id="@+id/totalDaysTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:textColor="@color/color_333333"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/verticalGuide2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalDay"
        tools:text="320 天" />

    <TextView
        android:id="@+id/totalPay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/total_pay"
        android:textColor="@color/color_333333"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/verticalGuide2"
        app:layout_constraintTop_toTopOf="@id/totalDay" />

    <TextView
        android:id="@+id/totalPayTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:textColor="@color/color_333333"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/verticalGuide2"
        app:layout_constraintTop_toBottomOf="@id/totalPay"
        tools:text="1000 元" />

    <TextView
        android:id="@+id/startDateTv"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/start_date"
        android:textColor="@color/color_90979e"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/verticalGuide1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/totalDaysTv" />

    <TextView
        android:id="@+id/endDateTv"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/end_date"
        android:textColor="@color/color_90979e"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/startDateTv"
        app:layout_constraintEnd_toEndOf="@id/verticalGuide2"
        app:layout_constraintStart_toStartOf="@id/verticalGuide1"
        app:layout_constraintTop_toTopOf="@id/startDateTv" />

    <TextView
        android:id="@+id/periodTv"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/pay_period"
        android:textColor="@color/color_90979e"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/startDateTv"
        app:layout_constraintEnd_toEndOf="@id/verticalGuide3"
        app:layout_constraintStart_toStartOf="@id/verticalGuide2"
        app:layout_constraintTop_toTopOf="@id/startDateTv" />

    <TextView
        android:id="@+id/priceTv"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/pay_price"
        android:textColor="@color/color_90979e"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/startDateTv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/verticalGuide3"
        app:layout_constraintTop_toTopOf="@id/startDateTv" />

<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--       android:background="@color/color_e9e9e9"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/startDateTv"/>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/payDetailRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startDateTv"
        tools:listitem="@layout/item_pay_detail"
        android:layout_marginHorizontal="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>